--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,18 +11,8 @@
 </p>
 
 <p>
-  <strong>Width:</strong>
-  <%= @product.width %>
-</p>
-
-<p>
-  <strong>Height:</strong>
-  <%= @product.height %>
-</p>
-
-<p>
-  <strong>Depth:</strong>
-  <%= @product.depth %>
+  <strong>Dimension:</strong>
+  <%= @product.dimension %>
 </p>
 
 <p>
