--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@box) do |f| %>
+<%= form_for(@box, class: "form-horizontal") do |f| %>
   <% if @box.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@box.errors.count, "error") %> prohibited this box from being saved:</h2>
@@ -11,15 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
-  <div class="field">
+
+  <div class="form-group">
     <%= f.label :volume %>
-    <%= f.number_field :volume, placeholder: "in liters" %>
+    <%= f.number_field :volume, placeholder: "in liters", class: "form-control" %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default" %>
   </div>
 <% end %>
