--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, class: "form-horizontal") do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -11,39 +11,44 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name, placeholder: "Product name", class: "long" %>
+    <%= f.text_field :name, placeholder: "Product name", class: "form-control" %>
   </div>
-  <div class="field">
+
+  <div class="form-group">
     <%= f.label :product_number %>
-    <%= f.text_field :product_number, placeholder: "ABC 123400-4567-89", class: "long" %>
+    <%= f.text_field :product_number, placeholder: "ABC 123400-4567-89", class: "form-control" %>
   </div>
 
-  <div class="field-group">
-    <div class="field">
+  <div class="row">
+    <div class="form-group col-sm-3">
       <%= f.label :width %>
-      <%= f.number_field :width, placeholder: "in millimeters", class: "short" %>
+      <%= f.number_field :width, placeholder: "in millimeters", class: "form-control" %>
     </div>
-    <div class="field">
+
+    <div class="form-group col-sm-3">
       <%= f.label :height %>
-      <%= f.number_field :height, placeholder: "in millimeters", class: "short" %>
+      <%= f.number_field :height, placeholder: "in millimeters", class: "form-control" %>
     </div>
-    <div class="field">
+
+    <div class="form-group col-sm-3">
       <%= f.label :depth %>
-      <%= f.number_field :depth, placeholder: "in millimeters", class: "short" %>
+      <%= f.number_field :depth, placeholder: "in millimeters", class: "form-control" %>
+    </div>
+
+    <div class="form-group col-sm-2 col-sm-offset-1">
+      <%= f.label :weight %>
+      <%= f.number_field :weight, placeholder: "in grams", class: "form-control" %>
     </div>
   </div>
 
-  <div class="field">
-    <%= f.label :weight %>
-    <%= f.number_field :weight, placeholder: "in grams", class: "short" %>
-  </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :stock_level %>
-    <%= f.number_field :stock_level %>
+    <%= f.number_field :stock_level, class: "form-control" %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default" %>
   </div>
 <% end %>
