--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing products</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,8 +21,8 @@
         <td><%= product.weight %></td>
         <td><%= product.stock_level %></td>
         <td>
-          <%= link_to 'Show', product %> | 
-          <%= link_to 'Edit', edit_product_path(product) %> | 
+          <%= link_to 'Show', product %>&nbsp;
+          <%= link_to 'Edit', edit_product_path(product) %>&nbsp;
           <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
       </tr>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'Add New Product', new_product_path, class: 'btn btn-primary' %>
